--- a/src/app/components/experience-section/experience-section.component.html
+++ b/src/app/components/experience-section/experience-section.component.html
@@ -1,5 +1,9 @@
 <div class="animation-duration-1000 animation-ease-in flex flex-column align-items-center gap-7">
-  <span #sectionTitle class="text-5xl font-light opacity-0 animation-duration-1000 text-700" style="letter-spacing: .25rem;">EXPERIENCE</span>   <!-- style="letter-spacing: .2rem;" -->
+  <div class="flex flex-column gap-4 align-items-center justify-content-center">
+    <span #title class="text-6xl font-light opacity-0 animation-duration-1000 text-700">Experience</span>   <!-- style="letter-spacing: .2rem;" -->
+    <span #subtitle class="text-center text-3xl text-500 font-light opacity-0 animation-duration-1000">All jobs I've worked, from the back to the front, from small to large teams.</span>
+  </div>
+
   <!-- <span class="text-600 text-6xl font-light">EXPERIENCE</span> -->
   <!-- <hr class="hr-gradient" /> -->
   <div #card class="flex flex-column align-items-center gap-5 p-5 experience-card opacity-0 animation-duration-1000">
