--- a/src/app/components/education-section/education-section.component.html
+++ b/src/app/components/education-section/education-section.component.html
@@ -38,7 +38,7 @@
    <!-- <div class="relative w-full">   -->
        <!-- border-1 border-round border-400 py-3 -->
      <!-- <div class="absolute w-full top-0 timeline-container border-1" style="height: 95%;"></div> -->
-    <div class="w-full overflow-x-scroll timeline-container px-5 flex xl:justify-content-center">
+    <div #timeline class="w-full overflow-x-scroll timeline-container px-5 flex xl:justify-content-center opacity-0 animation-duration-1000">
       <app-timeline [events]="events"></app-timeline>
     </div>
    
