--- a/src/app/components/education-section/timeline/timeline.component.scss
+++ b/src/app/components/education-section/timeline/timeline.component.scss
@@ -1,8 +1,19 @@
 .event-card {
     border-radius: 16px; 
-    border: 1px solid rgb(100, 100, 100,0.1);
-    background: color-mix(in srgb, var(--surface-800) 75%, transparent);//var(--surface-100);//rgba(255, 255, 255, 0.85);
+    // border: 1px solid var(--pink-700);
+    border-width: 1px;
+    border-style: solid;
+    border-color: color-mix(in srgb, var(--surface-100) 50%, transparent);
+    background: color-mix(in srgb, rgba(30,30,30) 20%, transparent); //color-mix(in srgb, var(--surface-800) 75%, transparent);//var(--surface-100);//rgba(255, 255, 255, 0.85);
     box-shadow: 0px 3px 10px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(6.6px);
     -webkit-backdrop-filter: blur(6.6px);
+}
+
+.bg-gradient {
+    background: radial-gradient(var(--pink-600) 0%, var(--primary-700) 150%) ;
+}
+
+.bg-gradient-2 {
+    background: radial-gradient(var(--primary-600) 0%, var(--pink-700) 100%) ;
 }
