--- a/src/app/components/education-section/education-section.component.html
+++ b/src/app/components/education-section/education-section.component.html
@@ -1,6 +1,7 @@
 <div class=" animation-duration-1000 animation-ease-in flex flex-column align-items-center gap-7">
   <div class="flex flex-column gap-4 align-items-center justify-content-center">
     <span #title class="text-6xl font-light opacity-0 animation-duration-1000 text-700">Education</span>   <!-- style="letter-spacing: .2rem;" -->
+    <!-- Bear in mind, other subtitles are text-2xl sm:text-3xl -->
     <span #subtitle class="text-center text-3xl text-500 font-light opacity-0 animation-duration-1000">University degrees and other adventures.</span>
   </div>
   <!-- <p-timeline [value]="events" [layout]="'horizontal'">
