--- a/src/app/components/other-projects-section/other-projects-item/other-projects-item.component.scss
+++ b/src/app/components/other-projects-section/other-projects-item/other-projects-item.component.scss
@@ -93,7 +93,8 @@
       }
     }
     .p-panel-content {
-      height: 12rem;
+      min-height: 12rem;
+      height: 100%;
       padding-left: 1.5rem;
       padding-right: 1.5rem;
       background-color: transparent;
