--- a/src/app/components/education-section/education-section.component.scss
+++ b/src/app/components/education-section/education-section.component.scss
@@ -26,4 +26,5 @@
 
 .timeline-container {
   mask-image: linear-gradient(to right, transparent 0%, black 28px, black calc(100% - 28px), transparent 100%);
+  scroll-behavior: smooth;
 }
