Experience item chevron fix on mobile. Removed unnecessary code

--- a/src/app/components/experience-section/experience-item/experience-item.component.html
+++ b/src/app/components/experience-section/experience-item/experience-item.component.html
@@ -23,7 +23,7 @@
             </a>
           </span>
         </p>
-        <div class="flex align-items-end pb-1 expand-icon" [style]="!expandablePanel.collapsed ? 'color: transparent' : 'color: var(--surface-500)'">
+        <div class="flex expand-icon" [style]="!expandablePanel.collapsed ? 'color: transparent' : 'color: var(--surface-500)'">
           <i [class]="' ' + (expandablePanel.collapsed ? 'pi pi-chevron-down' : '')"></i> 
         </div>
       </div>
