About me placeholder with stars background

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -17,7 +17,11 @@
   </div>
   <div class="section pt-0 sm:pt-5" style="margin-top: 8rem; padding-bottom: 7rem;">
     <!-- <div class="" appParallax [ratio]="0.3"></div> -->
-    <div class="other-projects-bg" appParallax [ratio]="1" style="background: linear-gradient(to right, black 30%, var(--pink-600) 220%) ;"></div>
+    <div class="star-layers overflow-hidden">
+      <div class="star-layer" id="stars"></div>
+      <div class="star-layer" id="stars2"></div>
+      <!-- <div class="star-layer" id="stars3"></div> -->
+    </div>
     <app-aboutme-section ></app-aboutme-section>
   </div>
 </div>
