--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -90,3 +90,112 @@
 
 // border: 1px solid red;
 // }
+
+
+
+//////////////////////// STARS BG /////////////////////////
+
+
+// Define a keyframe animation for stars
+@keyframes animStar {
+    from {
+      transform: translateY(0px);
+    }
+    to {
+      transform: translateY(-2000px);
+    }
+  }
+  
+  // Function to generate multiple box-shadow values for stars
+  @function multiple-box-shadow($number_of_stars) {
+    $value: "#{random(2000)}px #{random(2000)}px var(--primary-200)"; // Initial shadow
+    @for $i from 2 through $number_of_stars {
+      $value: "#{$value}, #{random(2000)}px #{random(2000)}px var(--primary-200)"; // Add more shadows
+    }
+    @return unquote($value); // Return the concatenated value
+  }
+  
+  // Generate different sets of box-shadow values for stars of varying sizes
+  $shadows-small: multiple-box-shadow(60); // Small stars 700
+  $shadows-medium: multiple-box-shadow(30); // Medium stars 200
+//   $shadows-big: multiple-box-shadow(15); // Big stars 100
+  
+  // Styling for the star layers container
+  .star-layers {
+    // height: 100vh;
+    // background: linear-gradient(to bottom right, rgba(10,10,10) 0%, rgba(40,40,40) 100%);
+    // overflow: hidden;
+    //  position: relative;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    z-index: -1;
+    filter: blur(1px);
+    -webkit-filter: blur(1px);
+    // border-top: 1px solid black;
+    // border-bottom: 1px solid black;
+    // background-color: black;
+    // background-size: cover;
+  
+    // Styling for each star layer
+    .star-layer {
+      position: absolute;
+      width: 1px;
+      height: 1px;
+      // background-color: var(--primary-200);
+      // // background: radial-gradient( var(--primary-500) 0%, white 100%);
+      // border-radius: 50px;
+      border-radius: 50%;
+      mix-blend-mode: screen;
+      background-image: radial-gradient(
+        hsl(180, 100%, 80%),
+        hsl(180, 100%, 80%) 10%,
+        hsla(180, 100%, 80%, 0) 56%
+      );
+  
+      &::after {
+        content: " ";
+        position: absolute;
+        top: 2000px;
+        width: 1px;
+        height: 1px;
+        background-color: var(--primary-200);
+        border-radius: 50px;
+      }
+    }
+  
+    // Apply styles to each star layer with different sizes
+    #stars {
+      box-shadow: $shadows-small; // Apply small star shadows
+      animation: animStar 50s linear infinite;
+      &::after {
+        box-shadow: $shadows-small; // Apply small star shadows to pseudo-element
+      }
+    }
+  
+    #stars2 {
+      width: 3px;
+      height: 3px;
+      box-shadow: $shadows-medium; // Apply medium star shadows
+      animation: animStar 100s linear infinite;
+      &::after {
+        width: 3px;
+        height: 3px;
+        box-shadow: $shadows-medium; // Apply medium star shadows to pseudo-element
+      }
+    }
+  
+    // #stars3 {
+    //   width: 7px;
+    //   height: 7px;
+    //   box-shadow: $shadows-big; // Apply big star shadows
+    //   animation: animStar 200s linear infinite;
+    //   &::after {
+    //     width: 6px;
+    //     height: 6px;
+    //     box-shadow: $shadows-big; // Apply big star shadows to pseudo-element
+    //   }
+    // }
+  }
