--- a/src/app/components/aboutme-section/aboutme-section.component.html
+++ b/src/app/components/aboutme-section/aboutme-section.component.html
@@ -1,6 +1,17 @@
 <div class="animation-duration-1000 animation-ease-in flex flex-column align-items-center gap-7">
   <span #sectionTitle class="text-6xl font-light animation-duration-1000 text-700">About me</span>
-  <div class="text-600">
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vitae varius quam, eu molestie orci. Maecenas in erat nec ante mollis malesuada. Curabitur ut dictum lectus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris elementum quam tellus, id consectetur magna lacinia ac. Vestibulum vulputate ipsum ac arcu hendrerit, sed euismod ligula rutrum. Nulla facilisi. Nunc vehicula eu mi ut finibus. Phasellus mollis, sem quis congue elementum, urna neque lacinia arcu, eu suscipit tortor neque id orci. Vestibulum quis massa sed nisl eleifend venenatis vel eget libero. Phasellus commodo, tellus a ullamcorper consectetur, justo odio pretium tellus, ut aliquam orci quam nec nibh. Ut tincidunt ante sit amet elementum consequat. Cras neque augue, blandit scelerisque risus at, volutpat luctus purus. Nam vitae nisi faucibus, consectetur purus vitae, vulputate ipsum. Integer tempor lacus id ipsum consequat vehicula. Vivamus gravida magna sit amet semper ultricies.
+  <div class="flex gap-8 w-full align-items-center">
+    <div class="text-600 text-xl text-justify"> <!-- style="width: 150rem;" -->
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vitae varius quam, eu molestie orci. Maecenas in erat nec ante mollis malesuada. Curabitur ut dictum lectus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris elementum quam tellus, id consectetur magna lacinia ac. Vestibulum vulputate ipsum ac arcu hendrerit, sed euismod ligula rutrum. Nulla facilisi. Nunc vehicula eu mi ut finibus. Phasellus mollis, sem quis congue elementum, urna neque lacinia arcu, eu suscipit tortor neque id orci. Vestibulum quis massa sed nisl eleifend venenatis vel eget libero. Phasellus commodo, tellus a ullamcorper consectetur, justo odio pretium tellus, ut aliquam orci quam nec nibh. Ut tincidunt ante sit amet elementum consequat. Cras neque augue, blandit scelerisque risus at, volutpat luctus purus. Nam vitae nisi faucibus, consectetur purus vitae, vulputate ipsum. Integer tempor lacus id ipsum consequat vehicula. Vivamus gravida magna sit amet semper ultricies.
+      </p>
+      <p>
+        Phasellus mollis, sem quis congue elementum, urna neque lacinia arcu, eu suscipit tortor neque id orci. Vestibulum quis massa sed nisl eleifend venenatis vel eget libero. Phasellus commodo, tellus a ullamcorper consectetur, justo odio pretium tellus, ut aliquam orci quam nec nibh. Ut tincidunt ante sit amet elementum consequat. Cras neque augue, blandit scelerisque risus at, volutpat luctus purus. Nam vitae nisi faucibus, consectetur purus vitae, vulputate ipsum. Integer tempor lacus id ipsum consequat vehicula. Vivamus gravida magna sit amet semper ultricies.
+      </p>
+    </div>
+    <!-- <div class="w-full"> -->  <!-- <div class="image-wrapper"> -->
+        <img src="assets/aboutme-picture.jpg" alt="Daniel Lopez picture" class="w-25rem"> <!-- w-full -->
+    <!-- </div> -->
   </div>
+
 </div>
