Glow: aboutme avatar, other projects items, timeline points

--- a/src/app/components/aboutme-section/aboutme-section.component.html
+++ b/src/app/components/aboutme-section/aboutme-section.component.html
@@ -1,7 +1,7 @@
-<div class="animation-duration-1000 animation-ease-in flex flex-column align-items-center gap-7">
+<!-- <div class="animation-duration-1000 animation-ease-in flex flex-column align-items-center gap-7">
   <span #sectionTitle class="text-6xl font-light animation-duration-1000 text-700">About me</span>
   <div class="flex gap-8 w-full align-items-center">
-    <div class="text-600 text-xl text-justify"> <!-- style="width: 150rem;" -->
+    <div class="text-600 text-xl text-justify">
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce vitae varius quam, eu molestie orci. Maecenas in erat nec ante mollis malesuada. Curabitur ut dictum lectus. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris elementum quam tellus, id consectetur magna lacinia ac. Vestibulum vulputate ipsum ac arcu hendrerit, sed euismod ligula rutrum. Nulla facilisi. Nunc vehicula eu mi ut finibus. Phasellus mollis, sem quis congue elementum, urna neque lacinia arcu, eu suscipit tortor neque id orci. Vestibulum quis massa sed nisl eleifend venenatis vel eget libero. Phasellus commodo, tellus a ullamcorper consectetur, justo odio pretium tellus, ut aliquam orci quam nec nibh. Ut tincidunt ante sit amet elementum consequat. Cras neque augue, blandit scelerisque risus at, volutpat luctus purus. Nam vitae nisi faucibus, consectetur purus vitae, vulputate ipsum. Integer tempor lacus id ipsum consequat vehicula. Vivamus gravida magna sit amet semper ultricies.
       </p>
@@ -9,9 +9,36 @@
         Phasellus mollis, sem quis congue elementum, urna neque lacinia arcu, eu suscipit tortor neque id orci. Vestibulum quis massa sed nisl eleifend venenatis vel eget libero. Phasellus commodo, tellus a ullamcorper consectetur, justo odio pretium tellus, ut aliquam orci quam nec nibh. Ut tincidunt ante sit amet elementum consequat. Cras neque augue, blandit scelerisque risus at, volutpat luctus purus. Nam vitae nisi faucibus, consectetur purus vitae, vulputate ipsum. Integer tempor lacus id ipsum consequat vehicula. Vivamus gravida magna sit amet semper ultricies.
       </p>
     </div>
-    <!-- <div class="w-full"> -->  <!-- <div class="image-wrapper"> -->
-        <img src="assets/aboutme-picture.jpg" alt="Daniel Lopez picture" class="w-25rem"> <!-- w-full -->
+
+        <img src="assets/aboutme-picture.jpg" alt="Daniel Lopez picture" class="w-25rem"> 
+
+  </div>
+
+</div> -->
+
+<div class="animation-duration-1000 animation-ease-in flex flex-column align-items-center gap-7">
+  <span #sectionTitle class="text-6xl font-light animation-duration-1000 text-700">About me</span>
+  <div>
+    <div class="round-img-wrapper flex align-items-center justify-content-center">
+      <img src="assets/aboutme-picture-transparent-square.png" alt="Daniel Lopez picture" class="w-21rem h-21rem round-img"> 
+    </div>
+    
+    <!-- <div class="flex gap-8 w-full align-items-center"> -->
+      <!-- <div class="text-600 text-xl text-justify"> -->
+        <div class="left-column text-600 text-2xl">
+          <p>“It’s been amazing working with him! I whish I could just replace all my coworkers with copies of him”, “Great Software Engineer, better person.”, “He solves every problem so quickly! I could watch him solve problems all day”… no one ever said these, but this is what my past coworkers probably thought of me had you asked them.</p>
+
+          <p>I consider myself a <span class="text-pink-600">Software Engineer</span>. Not a frontend/backend/fullstack/whatever developer, but an Engineer. With time I’ve come to realize that what makes a good engineer is not how many tools or languages he/she masters, but his/her ability to solve problems, and that’s what I do and (more importantly) enjoy most.</p>
+
+          <p>I’m a curious and adventurous person, and so I started this career thinking of the many doors it could open and the many paths I could take, and the possibilities to always learn new stuff and travel the world</p>
+        </div>
+        <div class="right-column text-600 text-2xl">
+          <p>Phasellus mollis, sem quis congue elementum, urna neque lacinia arcu, eu suscipit tortor neque id orci. Vestibulum quis massa sed nisl eleifend venenatis vel eget libero. Phasellus commodo, tellus a ullamcorper consectetur, justo odio pretium tellus, ut aliquam orci quam nec nibh. Ut tincidunt ante sit amet elementum consequat. Cras neque augue, blandit scelerisque risus at, volutpat luctus purus. Nam vitae nisi faucibus, consectetur purus vitae, vulputate ipsum. Integer tempor lacus id ipsum consequat vehicula. Vivamus gravida magna sit amet semper ultricies.</p>
+        </div>
+      <!-- </div> -->
     <!-- </div> -->
   </div>
 
+
 </div>
+
