--- a/src/app/components/other-projects-section/other-projects-item/other-projects-item.component.scss
+++ b/src/app/components/other-projects-section/other-projects-item/other-projects-item.component.scss
@@ -32,9 +32,10 @@
     //   height: 25rem;
     // }
     &:hover{
-      transition-duration: 500ms;
-      transition-property: border;
+      transition-duration: 300ms;
+      // transition-property: border;
       border-color: var(--pink-600);
+      box-shadow: 0px 0px 20px 7px var(--pink-700);
       // border: 1px solid var(--primary-800);
     //   border-image: linear-gradient(to bottom, var(--primary-600) 30%, var(--pink-900) 120%) 1;
 
