Button and timeline glow, aboutme fadein and text

--- a/src/app/components/aboutme-section/aboutme-section.component.html
+++ b/src/app/components/aboutme-section/aboutme-section.component.html
@@ -17,24 +17,28 @@
 </div> -->
 
 <div class="animation-duration-1000 animation-ease-in flex flex-column align-items-center gap-7">
-  <span #sectionTitle class="text-6xl font-light animation-duration-1000 text-700">About me</span>
+  <span #sectionTitle class="text-6xl font-light animation-duration-1000 text-700 opacity-0 animation-duration-1000">About me</span>
   <div>
-    <div class="round-img-wrapper flex align-items-center justify-content-center">
+    <div #avatar class="round-img-wrapper flex align-items-center justify-content-center opacity-0 animation-duration-1000">
       <img src="assets/aboutme-picture-transparent-square.png" alt="Daniel Lopez picture" class="w-21rem h-21rem round-img"> 
     </div>
     
     <!-- <div class="flex gap-8 w-full align-items-center"> -->
       <!-- <div class="text-600 text-xl text-justify"> -->
-        <div class="left-column text-600 text-2xl">
-          <p>“It’s been amazing working with him! I whish I could just replace all my coworkers with copies of him”, “Great Software Engineer, better person.”, “He solves every problem so quickly! I could watch him solve problems all day”… no one ever said these, but this is what my past coworkers probably thought of me had you asked them.</p>
-
-          <p>I consider myself a <span class="text-pink-600">Software Engineer</span>. Not a frontend/backend/fullstack/whatever developer, but an Engineer. With time I’ve come to realize that what makes a good engineer is not how many tools or languages he/she masters, but his/her ability to solve problems, and that’s what I do and (more importantly) enjoy most.</p>
-
-          <p>I’m a curious and adventurous person, and so I started this career thinking of the many doors it could open and the many paths I could take, and the possibilities to always learn new stuff and travel the world</p>
+        <div #text class="text-600 text-2xl opacity-0 animation-duration-1000">
+          <div class="left-column">
+            <p>“It’s been amazing working with him! I whish I could just replace all my coworkers with copies of him”, “Great Software Engineer, better person.”, “He solves every problem so quickly! I could watch him solve problems all day”… no one ever said these, but this is what my past coworkers probably thought of me had you asked them.</p>
+  
+            <p>I consider myself a <span class="text-pink-600">Software Engineer</span>. Not a frontend/backend/fullstack/whatever developer, but an Engineer. With time I’ve come to realize that what makes a good engineer is not how many tools or languages he/she masters, but his/her ability to solve problems, and that’s what I do and (more importantly) enjoy most.</p>
+  
+            <p>I’m a curious and adventurous person, and so I started this career thinking of the many doors it could open and the many paths I could take, and the possibilities to always learn new stuff and travel the world.</p>
+          </div>
+          <div class="right-column">
+            <p>I started my career in the back as that was the focus of my university degree, covid struck when I had barely landed in France for work and so I took that time to learn more of the front, working voluntarily for Rescue App and as a freelance building websites. Then I worked for Kokopilot, studied Art History at University of Malaga for 1.5 years (I love art, philosophy, history!... but had to focus on my career and keep self-learning those subjects I love) and ended in A2Systems, sharpening my front-end skills and discovering a fondness for design as well.</p>
+            <p>I've always loved <span class="text-pink-600">creating</span>. I used to draw when I was a kid, then started making music, and now I entertain myself building webs like this. So if you need a beautiful software engineer to take care of your product, I might be your man :)</p>
+          </div>
         </div>
-        <div class="right-column text-600 text-2xl">
-          <p>Phasellus mollis, sem quis congue elementum, urna neque lacinia arcu, eu suscipit tortor neque id orci. Vestibulum quis massa sed nisl eleifend venenatis vel eget libero. Phasellus commodo, tellus a ullamcorper consectetur, justo odio pretium tellus, ut aliquam orci quam nec nibh. Ut tincidunt ante sit amet elementum consequat. Cras neque augue, blandit scelerisque risus at, volutpat luctus purus. Nam vitae nisi faucibus, consectetur purus vitae, vulputate ipsum. Integer tempor lacus id ipsum consequat vehicula. Vivamus gravida magna sit amet semper ultricies.</p>
-        </div>
+
       <!-- </div> -->
     <!-- </div> -->
   </div>
