--- a/src/app/components/education-section/timeline/timeline.component.scss
+++ b/src/app/components/education-section/timeline/timeline.component.scss
@@ -18,6 +18,7 @@
 
 .bg-gradient-2 {
     background: radial-gradient(var(--pink-700) 0%, var(--primary-600) 100%) ;
+    box-shadow: 15px 0px 20px 3px var(--pink-700);
 }
 
 //glowing orbs
