--- a/src/app/components/personal-info/personal-info.component.html
+++ b/src/app/components/personal-info/personal-info.component.html
@@ -11,8 +11,8 @@
     <div class="flex gap-4 fadein animation-duration-1000">
       <p-button styleClass="bg-primary-400 border-none" [size]="'large'" [rounded]="true" icon="pi pi-phone" [disabled]="true"></p-button>
       <p-button styleClass="bg-primary-400 border-none" [size]="'large'" [rounded]="true" icon="pi pi-envelope" [disabled]="true"></p-button>
-      <a  href="https://www.linkedin.com/in/daniel-lopez-fernandez-b14a9512a/" target="_blank">
-        <p-button styleClass="bg-primary border-none" [size]="'large'" [rounded]="true" icon="pi pi-linkedin"></p-button>
+      <a  href="https://www.linkedin.com/in/daniel-lopez-fernandez-b14a9512a/" target="_blank" class="button-enabled">
+        <p-button styleClass="bg-primary hover:bg-primary-400 transition-duration-300 border-none" [size]="'large'" [rounded]="true" icon="pi pi-linkedin"></p-button>
       </a>
     </div>
   </div>
